Tesing registration face recognization, office In, offcie out
Tesing registration face recognization, office In, offcie out

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ FaceTek.xcodeproj/xcuserdata/
 FaceTek.xcodeproj/xcuserdata/*
 /FaceTek/FaceSDK/
 /FaceTek/FaceSDK/*
+.DS_Store
+.DS_Store/*
+/.DS_Store/
+/.DS_Store/*
