added gitignore content
added gitignore content

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ FaceTek.xcodeproj/xcuserdata/*
 .DS_Store/*
 /.DS_Store/
 /.DS_Store/*
+/.DS_Store
 Pods
 Pods/*
 /Pods
@@ -20,3 +21,4 @@ FaceTek.xcworkspace/*
 /FaceTek.xcworkspace/*
 Podfile.lock
 /Podfile.lock
+
