On Fieldvisit Alamofire,API integration
On Fieldvisit Alamofire,API integration

--- a/podfile
+++ b/podfile
@@ -2,5 +2,6 @@ use_frameworks!
 target 'FaceTek' do
     pod 'GoogleMaps'
   pod 'GooglePlaces'
-
+   pod 'Alamofire', '~> 4.7'
+    pod 'SwiftyJSON', '~> 4.0'
 end
