Fixed internet connection issues
Fixed internet connection issues

--- a/podfile
+++ b/podfile
@@ -1,7 +1,8 @@
 use_frameworks!
 target 'FaceTek' do
-    pod 'GoogleMaps'
-  pod 'GooglePlaces'
-   pod 'Alamofire', '~> 4.7'
-    pod 'SwiftyJSON', '~> 4.0'
+	pod 'GoogleMaps'
+	pod 'GooglePlaces'
+	pod 'Alamofire', '~> 4.7'
+	pod 'SwiftyJSON', '~> 4.0'
+	pod 'ReachabilitySwift'
 end
