--- a/podfile
+++ b/podfile
@@ -5,4 +5,5 @@ target 'FaceTek' do
 	pod 'Alamofire', '~> 4.7'
 	pod 'SwiftyJSON', '~> 4.0'
 	pod 'ReachabilitySwift'
+        pod 'FSCalendar'
 end
