--- a/podfile
+++ b/podfile
@@ -1,4 +1,8 @@
+
+
+
 use_frameworks!
+ platform :ios, '9.0'
 target 'FaceTek' do
 	pod 'GoogleMaps'
 	pod 'GooglePlaces'
@@ -6,4 +10,6 @@ target 'FaceTek' do
 	pod 'SwiftyJSON', '~> 4.0'
 	pod 'ReachabilitySwift'
         pod 'FSCalendar'
+pod 'FirebaseAnalytics', '~>4.0'
+pod 'Firebase/Messaging', '~> 4.0.0'
 end
